# sfw

./: Cargo.toml  LICENSE  README.md  rules.json
src/: main.rs
src/sfw_rules_table/: mod.rs
src/sfw_state_table/: mod.rs
